Update airControl - NewKey&ID.html

--- a/airControl - NewKey&ID.html
+++ b/airControl - NewKey&ID.html
@@ -105,7 +105,7 @@
     <input type="button" id="pesquisa" value="Obter localização" onclick="obterDadosMapa();"/>
 	<div id="map" ></div>
 	
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcdgVWfFAYSScutCNLWzlZAqBr-iY6i1g&callback=desenhaMapa" async defer></script>   
+<script src="https://maps.googleapis.com/maps/api/js?key="GOOGLEKEY"&callback=desenhaMapa" async defer></script>   
 <script>
 		//criacao de variaveis globais 
     var id;
